# LargeVolumeTrading

./: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/: AAPL_sample.csv  almgren_kriss_example.cpp  download_data.py  optimal_speed_example.cpp  vwap_example.cpp
src/market/: market_simulator.cpp  market_simulator.h
src/order/: order_manager.cpp  order_manager.h
src/strategy/: almgren_kriss_model.cpp  almgren_kriss_model.h  limit_order_speed_model.cpp  limit_order_speed_model.h  vwap_calculator.cpp  vwap_calculator.h
tests/: test_almgren_kriss_model.cpp  test_limit_order_speed_model.cpp  test_market_simulator.cpp  test_order_manager.cpp  test_vwap_calculator.cpp
